syntax = "proto3";

option go_package = "GRPC/auth.proto";

package auth;

service Auth {
  rpc GetUserWithRights(AccessToken) returns (Response) {}
  rpc BindUserAndRole(User) returns (Resp) {}
  rpc CheckToken(AccessToken) returns (Result) {}
  rpc TokenGenerationByRefresh(RefreshToken) returns (GeneratedTokens) {}
  rpc TokenGenerationById(User) returns (GeneratedTokens) {}
  rpc GetSalt(ReqSalt) returns (Salt) {}
}

message Response {
  int32 userId = 1;
  int32 role = 2;
  string permissions = 3;
}

message AccessToken {
  string accessToken = 1;
}

message Result {
  bool result = 1;
}

message RefreshToken {
  string refreshToken = 1;
}

message GeneratedTokens {
  string accessToken = 1;
  string refreshToken = 2;
}

message User {
  int32 userId = 1;
  int32 roleId = 2;
}

message ReqSalt {
}

message Salt {
  string salt = 1;
}

message Resp {
}